# tracy

./: .gitignore  CMakeLists.txt  config.ini  example.trc  example.xml  tracy.cc
inc/: detector.hh  object.hh  physics.hh  ray.hh  source.hh  sphere.hh  tinyxml2.hh  trace.hh  vertex.hh
src/: detector.cc  object.cc  physics.cc  ray.cc  source.cc  sphere.cc  tinyxml2.cc  trace.cc  vertex.cc
